Fix tests to use --add-opens